[gd_scene format=3]

[ext_resource type="Script" path="res://src/furniture/hide_table.gd" id="1_hide_table_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hidezone"]
size = Vector2(100, 60)

[node name="HideTable" type="Node2D"]
script = ExtResource("1_hide_table_script")

[node name="TableVisual" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = -10.0
offset_right = 60.0
offset_bottom = 10.0
color = Color(0.55, 0.35, 0.2, 1)

[node name="LegVisual1" type="ColorRect" parent="."]
offset_left = -50.0
offset_top = 10.0
offset_right = -40.0
offset_bottom = 50.0
color = Color(0.45, 0.3, 0.15, 1)

[node name="LegVisual2" type="ColorRect" parent="."]
offset_left = 40.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.45, 0.3, 0.15, 1)

[node name="HideZone" type="Area2D" parent="."]
position = Vector2(0, 15)
monitoring = false
monitorable = true
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HideZone"]
shape = SubResource("RectangleShape2D_hidezone")
